--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
     "@emotion/is-prop-valid": "latest",
     "prop-types": "latest",
     "framer-motion": "latest",
-    "react-type-animation": "latest",
-    "react-tilt": "latest"
+    "react-tilt": "latest",
+    "react-type-animation": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
